--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,21 @@
 .content {
     display: flex;
     justify-content: center;
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+    
+    ::-webkit-scrollbar-track {
+        border-radius: 8px;
+        background-color: #e7e7e7;
+        border: 1px solid #cacaca;
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        border-radius: 8px;
+        background-color: #727272;
+    }    
 }
 
 .image-container {
@@ -20,17 +35,11 @@
     right: 20px;
     height: 30%;
     padding-top: 50px;
+    padding-left: 12px;
     overflow: auto;
     font-size: 24px;
     color: white;
     text-align: center;
-    ::-webkit-scrollbar {
-        display: none;
-    }
-
-    /* Hide scrollbar for IE, Edge and Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
 }
 
 .opening-paragraph {
