--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 .content {
     display: flex;
     justify-content: center;
+    font-family: "Times New Roman", Times, serif;
+    text-shadow: 2px 1.5px 2px #646464;
     ::-webkit-scrollbar {
         width: 12px;
     }
@@ -42,6 +44,10 @@
     text-align: center;
 }
 
+.english {
+    font-style: italic;
+}
+
 .opening-paragraph {
     margin-top: 80px;
 }
@@ -66,4 +72,23 @@
 
 .date-location {
     margin-top: 80px;
+}
+
+.last-paragraph {
+    margin-bottom: 0;
+}
+
+.copy-account-number{
+    margin: 8px 0;
+}
+
+button.copy {
+    background-color: white;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    color: #8DA8C3;
+    border-radius: 5px; 
+    font-size: 16px;
+    font-weight: 700;
 }
