--- a/styles.css
+++ b/styles.css
@@ -6,37 +6,32 @@ body, html {
 .content {
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
+    background-color: #8ea7c1;
+    text-shadow: 0px 2px 10px #687e93;
     height: 100%;
     width: 100%;
-    margin: 0 auto;
-    text-shadow: 0px 2px 10px #687e93;
-    ::-webkit-scrollbar {
-        width: 12px;
-    }
-    
-    ::-webkit-scrollbar-track {
-        border-radius: 8px;
-        background-color: #e7e7e7;
-        border: 1px solid #cacaca;
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    }
-    
-    ::-webkit-scrollbar-thumb {
-        border-radius: 8px;
-        background-color: #727272;
-    }    
-}
-
-@media (min-width: 769px) {
-    .content {
-      width: 768px;
+    @media (min-width: 1024px) {
+        width: 1024px;
     }
 }
 
 .sky {
     background-color: #8ea7c1;
     overflow: auto;
-    max-height: 40%;
+    max-height: 45%;
+    margin-top: 20%;
+    mask-image: linear-gradient(
+        to bottom, 
+        transparent, 
+        white 20px, 
+        white calc(100% - 20px), 
+        transparent
+    );
+    @media (min-width: 600px) {
+        margin-top: unset;
+        max-height: 35%;
+    }
 }
 
 .image-container {
@@ -47,25 +42,26 @@ body, html {
 }
 
 .information {
-    padding-left: 12px;
-    overflow: auto;
-    font-size: 24px;
+    padding: 24px 0px 24px 12px;
+    overflow-y: auto;
     color: white;
     text-align: center;
+    font-size: 16px;
+    position: relative;
+    @media (min-width: 768px) {
+        font-size: 18px;
+    }
 }
 
 .korean {
     font-family: "HYMyeongJo-Extra", "Apple SD Gothic Neo", sans-serif;
+    line-height: 1.5;
 }
 
 .english {
     font-family: "Crimson Text", serif;
     font-weight: 400;
     font-style: italic;
-}
-
-.opening-paragraph {
-    margin-top: 80px;
 }
 
 .names-table {
@@ -87,49 +83,72 @@ body, html {
 }
 
 .date-location {
+    display: flex;
+    flex-direction: column;
     margin-top: 80px;
-}
-
-.show-account-details, .directions {
-    margin-bottom: 0;
-    text-decoration: underline;
-    cursor: pointer;
 }
 
 .hidden {
     max-height: 0;
+    opacity: 0;
     overflow: hidden;
-    transition: max-height 0.5s ease-out, visibility 0s 0.5s;
+    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
     visibility: hidden;
 }
 
-.show {
-    max-height: 500px; /* you can adjust this value based on your content */
+.show-account {
+    max-height: 120px;
+    opacity: 1;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
     visibility: visible;
-    transition: max-height 0.5s ease-out, visibility 0s;
 }
+
 .copy-account-number{
     margin: 8px 0;
 }
 
+.address {
+    margin-bottom: 0;
+}
+
+button.directions {
+    font-size: 12px;
+    margin-top: 4px;
+    padding: 2px;
+    width: fit-content;
+    align-self: center;
+}
+
+button.show-account-details, 
+button.directions {
+    background-color: #8DA8C3;
+    color: white;
+    outline: 2px solid #bdd3eb;
+}
+
 button.copy {
     background-color: white;
-    border: none;
-    padding: 5px;
-    cursor: pointer;
     color: #8DA8C3;
-    border-radius: 5px; 
+    font-size: 14px;
+}
+
+button {
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 5px;
     font-size: 16px;
     font-weight: 700;
 }
 
-button.copy:hover,
-button.copy:focus {
+button:hover,
+button:focus {
     box-shadow: inset 0px 0px 6px 7px #00000024;
     outline: none;
 }
 
-button.copy:active {
+button:active {
     background-color: #8DA8C3;
     color: white;
 }
@@ -137,11 +156,11 @@ button.copy:active {
 .tooltip {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+    transition: visibility 0.2s, opacity 0.5s ease-in-out;
+    margin-top: 8px;
 }
 
 .tooltip.show {
     visibility: visible;
     opacity: 1;
-    transition-delay: 0s;
 }
