--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,10 @@ html {
 
 .copy-account-number {
     margin: 8px 0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
+    text-decoration: none; 
 }
 
 .address {
